# jjf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ux.txt
.github/workflows/: ci.yml
src/: jj.rs  main.rs  tui.rs
src/init/: bash.sh  fish.fish  mod.rs  nu.nu  zsh.sh
